# c2-core

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: deploy.yaml  pull_request_template.md  release-drafter.yml
.github/workflows/: deploy.yaml  release_drafter.yaml
docs/: index.md
docs/nosotros/: lineamientos.md  manifiesto.md
docs/operaciones/: index.md
docs/operaciones/codigo/: buenas_practicas.md  c2_cli.md  extensiones.md  guia_estilo_librerias.md  guia_estilo_python.md  guia_oop_python.md  uv.md
docs/operaciones/colaboracion/: contributing.md  conventional_commits.md  etiquetas.md  git_config.md  git_workflow.md  github.md  github_workflow.md  issues.md  owners.md  pr_workflows.md  (+1 more)
docs/plantillas/: PERFIL.md  README_TEMPLATE.md  README_TEMPLATE_SIMPLIFIED.md  fundamentals.md
docs/proyectos/: bcrp.md  consulta_amigable.md  index.md  inei.md  renamu.md  seace.md  sunat.md
docs/stylesheets/: extra.css
javascripts/: hero-fade.js
nosotros/governanza/: index.html
nosotros/lineamientos/: index.html
nosotros/manifiesto/: index.html
operaciones/: index.html
plantillas/PERFIL/: index.html
plantillas/README_TEMPLATE/: index.html
plantillas/README_TEMPLATE_SIMPLIFIED/: index.html
plantillas/fundamentals/: index.html
proyectos/: index.html
proyectos/bcrp/: index.html
proyectos/consulta_amigable/: index.html
proyectos/inei/: index.html
proyectos/renamu/: index.html
proyectos/seace/: index.html
proyectos/sunat/: index.html
search/: search_index.json
(+34 files in other folders)
